@@ -1,2 +1,2 @@
-Document (bib key),Location (page),Gist/Quote,Q,Notes,,,,,
-,,,,,,,,,
+Document (bib key),Location (page),Gist/Quote,Q,Notes
+rinker2013,13,"An **EXAMPLE**; feel ""free"" to *delete* it ***soon**",y,EXAMPLE
